force-app/main/default/objects/Deal_Material_Change_Policy__mdt/Deal_Material_Change_Policy__mdt.object-meta.xml
<CustomObject><label
  >Deal Material Change Policy</label><pluralLabel
  >Deal Material Change Policies</pluralLabel><visibility
  >Public</visibility></CustomObject>