force-app/main/default/objects/Deal_Material_Change_Policy__mdt/fields/Change_Type__c.field-meta.xml
<CustomField>
    <fullName>Change_Type__c</fullName>
    <description
  >Closed to what DealOpportunityReconciliationBatch actually detects:
  CustomerChanged, AmountChanged, CloseDateChanged, OwnerChanged.</description>
    <label>Change Type</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>