force-app/main/default/objects/Deal_Material_Change_Policy__mdt/fields/Require_Reapproval__c.field-meta.xml
<CustomField>
    <fullName>Require_Reapproval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Require Reapproval</label>
    <type>Checkbox</type>
</CustomField>