force-app/main/default/objects/Deal_Material_Change_Policy__mdt/fields/Variance_Threshold_Percent__c.field-meta.xml
<CustomField>
    <fullName>Variance_Threshold_Percent__c</fullName>
    <description
  >Only meaningful for Change_Type__c = AmountChanged - the percentage
  variance between Approved_Revenue__c and the live Opportunity Amount
  that must be exceeded before this policy's Require_Reapproval__c
  applies. Null for other change types, where any change is material.</description>
    <label>Variance Threshold Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>